--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
   "author": "DONGGEON LIM <ooqwe486@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "antd": "^3.26.20",
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.14.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.3",
     "connected-react-router": "^6.9.1",
