--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.14.0",
+    "antd-country-phone-input": "^3.4.3",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.3",
     "connected-react-router": "^6.9.1",
