--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-select": "^4.3.0",
+    "react-select-country-list": "^2.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
